# project-f

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 0001_init.down.sql  0001_init.up.sql
src/: main.rs  manager.rs  state.rs
src/routes/: files.rs  manage.rs  mod.rs
web/: .env.development  .env.production  bun.lockb  index.html  package.json
web/src/: app.module.scss  app.tsx  index.scss  main.tsx
web/src/hooks/: windowSize.tsx
web/src/pages/list/: list.module.scss  list.tsx  preview.module.scss  preview.tsx
web/src/pages/token/: token.tsx
web/src/pages/upload/: upload.module.scss  upload.tsx
